<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/menu_name" />

        <EditText
            android:id="@+id/et_menu_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/menu_description" />

        <EditText
            android:id="@+id/et_menu_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/menu_quantity"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinner_menu_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinner_menu_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinner_menu_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/menu_price"
            android:inputType="numberDecimal" />
    </LinearLayout>
</ScrollView>
